update security on nginx default.conf

--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -16,6 +16,10 @@ server {
         root /var/www/html;
         index index.php;
         try_files $uri $uri/ /api/index.php?$args;
+
+        limit_except GET POST {
+            deny all;
+        }
     }
 
     # Handle *.php ภายใต้ /api/
@@ -33,6 +37,10 @@ server {
         autoindex off;
         expires 7d;
         add_header Cache-Control "public";
+    }
+
+    location ~* ^/uploads/.*\.php$ {
+        return 403;
     }
 
     # error handling
